Migrate thresholds for number of keyspaces and tables to guardrails
This adds a new guardrail for limiting the number of keyspaces. It also  marks the previous not-guardrail thresholds
for keyspaces and tables as deprecated in favour of the equivalent guardrails. GuardrailsOptions is modified to always
log updates on guardrails config. A small refactor decouples guardrails from their configuration interfaces.

patch by Andrés de la Peña; reviewed by Ekaterina Dimitrova for CASSANDRA-17195

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -86,6 +86,11 @@ Upgrading
 
 Deprecation
 -----------
+    - The properties `keyspace_count_warn_threshold` and `table_count_warn_threshold` in cassandra.yaml have been
+      deprecated in favour of the new `guardrails.keyspaces` and `guardrails.tables` properties and will be removed
+      in a subsequent major version. This also affects the setters and getters for those properties in the JMX MBean
+      `org.apache.cassandra.db:type=StorageService`, which are equally deprecated in favour of the analogous methods
+      in the JMX MBean `org.apache.cassandra.db:type=Guardrails`. See CASSANDRA-17195 for further details.
 
 4.0
 ===
