--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Make capacity/validity/updateinterval/activeupdate for Auth Caches configurable via nodetool (CASSANDRA-17063)
  * Added startup check for read_ahead_kb setting (CASSANDRA-16436)
  * Avoid unecessary array allocations and initializations when performing query checks (CASSANDRA-17209)
  * Add guardrail for list operations that require read before write (CASSANDRA-17154)
