--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Add a virtual table for exposing batch metrics (CASSANDRA-17225)
  * Flatten guardrails config (CASSANDRA-17353)
  * Instance failed to start up due to NPE in StartupClusterConnectivityChecker (CASSANDRA-17347)
  * add the shorter version of version flag (-v) in cqlsh (CASSANDRA-17236)
