Review comments - XSpec

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -44,7 +44,7 @@ Upgrading
     - There is a new cassandra.yaml version 2. Units suffixes should be provided for all rates(B/s|MiB/s|KiB/s|MiB/s),
       memory (KiB|MiB|GiB|B) and duration(d|h|s|ms|us|µs|ns|m)
       parameters. (CASSANDRA-15234)
-      Backward compatibility with the old cassandra.yaml file will be in place until the next major version.
+      Backward compatibility with the old cassandra.yaml file will be in place until at least the next major version.
     - Many cassandra.yaml parameters' names have been changed. Full list can be found on ...... (ADD LINK LATER WHEN PAGE
       IS CREATED) (CASSANDRA-15234)
 
