--- a/doc/modules/cassandra/pages/cql/cql_singlefile.adoc
+++ b/doc/modules/cassandra/pages/cql/cql_singlefile.adoc
@@ -1386,6 +1386,7 @@ WHERE  +
 | `.' `='
 
 ::=  +
+| CONTAINS (KEY)? +
 | IN  +
 | `[' `]'  +
 | `[' `]' IN  +
@@ -1498,6 +1499,7 @@ WHERE  +
 ::= ( | `(' ( ( `,' )* )? `)')
 
 ::= ( | `!=')  +
+| CONTAINS (KEY)? +
 | IN  +
 | `[' `]' ( | `!=')  +
 | `[' `]' IN  +
