Fix conversion from  megabits to bytes in streaming rate limiter
patch by Andrés de la Peña; reviewed by Berenguer Blasi for CASSANDRA-17243

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -87,6 +87,12 @@ Upgrading
       was created while the above property was set to be more than 30 otherwise they will not be able to log in.
     - JNA library was updated from 5.6.0 to 5.9.0. In version 5.7.0, Darwin support for M1 devices
       was fixed but prebuild native library for Darwin x86 (32bit Java on Mac OS) was removed.
+    - The config properties for setting the streaming throughput `stream_throughput_outbound_megabits_per_sec` and
+      `inter_dc_stream_throughput_outbound_megabits_per_sec` were incorrectly interpreted as mebibits. This has
+      been fixed by CASSANDRA-17243, so the values for these properties will now indicate a throughput ~4.6% lower than
+      what was actually applied in previous versions. This also affects the setters and getters for these properties in
+      the JMX MBean `org.apache.cassandra.db:type=StorageService` and the nodetool commands `set/getstreamthroughput`
+      and `set/getinterdcstreamthroughput`.
 
 Deprecation
 -----------
