Remove path for unused geomet package in cqlsh
Patch by Brad Schoening; reviewed by brandonwilliams and bereng for
CASSANDRA-17271

Remove path for unused `geomet` package, which does not appear to be
used in CQLSH.  It is an optional dependency of the cassandra-driver in
a test case.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0.2
+ * Remove unused 'geomet' package from cqlsh path (CASSANDRA-17271)
  * Removed unused 'cql' dependency (CASSANDRA-17247)
  * Don't block gossip when clearing repair snapshots (CASSANDRA-17168)
  * Deduplicate warnings for deprecated parameters (changed names) (CASSANDRA-17160)
