--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,7 @@
 3.0.27
+ * LeveledCompactionStrategy disk space check improvements (CASSANDRA-17272)
  * Lazy transaction log replica creation allows incorrect replica content divergence during anticompaction (CASSANDRA-17273)
+
 
 3.0.26
  * Fix conversion from megabits to bytes in streaming rate limiter (CASSANDRA-17243)
