Reject snapshot names with special character
Patch by Maxwell Guo, Saranya Krishnakumar and Francisco Guerrero; review
by Benjamin Lerer, Chris Lohfink, Stefan Miklosovic for CASSANDRA-15297

This commit also adds unit tests for the snapshot nodetool command.

Co-authored-by: Saranya Krishnakumar <saranya_k@apple.com>
Co-authored-by: Francisco Guerrero <francisco.guerrero@apple.com>

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0.4
+ * Reject snapshot names with special character (CASSANDRA-15297)
  * Fix ObjectSizes implementation and usages (CASSANDRA-17402)
  * Fix race condition bug during local session repair (CASSANDRA-17335)
  * Fix ignored streaming encryption settings in sstableloader (CASSANDRA-17367)
