--- a/doc/modules/cassandra/pages/new/java11.adoc
+++ b/doc/modules/cassandra/pages/new/java11.adoc
@@ -11,10 +11,8 @@ all non-LTS versions.
 One of the objectives of the Apache Cassandra 4.0 version is to support
 the recent LTS Java versions 8 and 11
 (https://issues.apache.org/jira/browse/CASSANDRA-9608[CASSANDRA-9608]).
-Java 8 and Java 11 may be used to build and run Apache Cassandra 4.0.
-
-*Note*: Support for JDK 11 in Apache Cassandra 4.0 is an experimental
-feature, and not recommended for production use.
+Java 8 and Java 11 may be used to build and run Apache Cassandra 4.0. Effective Cassandra
+4.0.2 there is full Java 11 support, it is not experimental anymore.
 
 == Support Matrix
 
