--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0.2
+ * Full Java 11 support (CASSANDRA-16894)
  * Remove unused 'geomet' package from cqlsh path (CASSANDRA-17271)
  * Removed unused 'cql' dependency (CASSANDRA-17247)
  * Don't block gossip when clearing repair snapshots (CASSANDRA-17168)
