--- a/doc/modules/cassandra/pages/getting_started/installing.adoc
+++ b/doc/modules/cassandra/pages/getting_started/installing.adoc
@@ -14,25 +14,26 @@ limited to):
 * SUSE Enterprise Linux 12
 
 This is not an exhaustive list of operating system platforms, nor is it
-prescriptive. However users will be well-advised to conduct exhaustive
+prescriptive. However, users will be well-advised to conduct exhaustive
 tests of their own particularly for less-popular distributions of Linux.
 Deploying on older versions is not recommended unless you have previous
 experience with the older distribution in a production environment.
 
 == Prerequisites
 
-* Install the latest version of Java 8, either the
+* Install the latest version of Java 8 or Java 11, either the
 http://www.oracle.com/technetwork/java/javase/downloads/index.html[Oracle
-Java Standard Edition 8] or http://openjdk.java.net/[OpenJDK 8]. To
+Java Standard Edition 8] / http://www.oracle.com/technetwork/java/javase/downloads/index.html[Oracle Java Standard Edition 11 (Long Term Support)]
+or http://openjdk.java.net/[OpenJDK 8] / http://openjdk.java.net/[OpenJDK 11]. To
 verify that you have the correct version of java installed, type
 `java -version`.
-* *NOTE*: _Experimental_ support for Java 11 was added in Cassandra {40_version}
+* *NOTE*: Experimental support for Java 11 was added in Cassandra {40_version}
 (https://issues.apache.org/jira/browse/CASSANDRA-9608[CASSANDRA-9608]).
-Running Cassandra on Java 11 is _experimental_. Do so at your own risk.
+Full support is effective Cassandra 4.0.2 version (https://issues.apache.org/jira/browse/CASSANDRA-16894[CASSANDRA-16894])
 For more information, see
 https://github.com/apache/cassandra/blob/trunk/NEWS.txt[NEWS.txt].
 * For using cqlsh, the latest version of
-https://www.python.org/downloads/[Python 2.7] or Python 3.6+. To verify
+Python 3.6+ or Python 2.7 (support deprecated). To verify
 that you have the correct version of Python installed, type
 `python --version`.
 
