--- a/NEWS.txt
+++ b/NEWS.txt
@@ -77,6 +77,7 @@ New features
     - Information about pending hints is now available through `nodetool listpendinghints` and `pending_hints` virtual
       table.
     - Added ability to invalidate auth caches through corresponding `nodetool` commands and virtual tables.
+    - DCL statements in audit logs will now obscure only the password if they don't fail to parse.
 
 Upgrading
 ---------
