--- a/doc/modules/cassandra/pages/operating/security.adoc
+++ b/doc/modules/cassandra/pages/operating/security.adoc
@@ -327,8 +327,8 @@ the first based on standard JMX security and the second which integrates
 more closely with Cassandra's own auth subsystem.
 
 The default settings for Cassandra make JMX accessible only from
-localhost. To enable remote JMX connections, edit `cassandra-env.sh` (or
-`cassandra-env.ps1` on Windows) to change the `LOCAL_JMX` setting to
+localhost. To enable remote JMX connections, edit `cassandra-env.sh`
+to change the `LOCAL_JMX` setting to
 `no`. Under the standard configuration, when remote JMX connections are
 enabled, `standard JMX authentication <standard-jmx-auth>` is also
 switched on.
@@ -490,7 +490,7 @@ See also: xref:cql/security.adoc#permissions[`Permissions`].
 
 JMX SSL configuration is controlled by a number of system properties,
 some of which are optional. To turn on SSL, edit the relevant lines in
-`cassandra-env.sh` (or `cassandra-env.ps1` on Windows) to uncomment and
+`cassandra-env.sh` to uncomment and
 set the values of these properties as required:
 
 `com.sun.management.jmxremote.ssl`::
