Flatten guardrails config
patch by Andrés de la Peña; reviewed by David Capwell for CASSANDRA-17353

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Flatten guardrails config (CASSANDRA-17353)
  * Instance failed to start up due to NPE in StartupClusterConnectivityChecker (CASSANDRA-17347)
  * add the shorter version of version flag (-v) in cqlsh (CASSANDRA-17236)
  * Make vtables accessible via internode messaging (CASSANDRA-17295)
