--- a/doc/modules/cassandra/pages/operating/security.adoc
+++ b/doc/modules/cassandra/pages/operating/security.adoc
@@ -113,21 +113,21 @@ YAML!)
 
 Beginning with Cassandra 4, Cassandra supports hot reloading of SSL
 Certificates. If SSL/TLS support is enabled in Cassandra and you are
-using default file based key material, the node periodically polls the
-Trust and Key Stores specified in cassandra.yaml. When the files are
-updated, Cassandra will reload them and use them for subsequent
-connections. Please note that the Trust & Key Store passwords are part
-of the yaml so the updated files should also use the same passwords.
-The default polling interval is 10 minutes.
+using default file based key material, the node periodically (every
+10 minutes) polls the Trust and Key Stores specified in
+cassandra.yaml. When the files are updated, Cassandra will reload
+them and use them for subsequent connections. Please note that the
+Trust & Key Store passwords are part of the yaml so the updated files
+should also use the same passwords.
 
 If you are customizing the SSL configuration via `ssl_context_factory`
-setting, Cassandra polls your implementation to check if the SSL
-certificates need to be reloaded. See the
-https://github.com/apache/cassandra/blob/trunk/src/java/org/apache/cassandra/security/ISslContextFactory.java#L90[ISslContextFactory]
-documentation for more details. If you are using one of the
-Cassandra's in-built SSL context factory class (example:
-PEMBasedSslContextFactory) with file based key material, it supports
-the hot reloading of the SSL certificates like mentioned above.
+setting, Cassandra polls (at the same periodic interval mentioned above)
+your implementation to check if the SSL certificates need to be
+reloaded. See the https://github.com/apache/cassandra/blob/trunk/src/java/org/apache/cassandra/security/ISslContextFactory.java#L90[ISslContextFactory] documentation for more details.
+If you are using one of the Cassandra's in-built SSL context factory
+class (example: PEMBasedSslContextFactory) with file based key
+material, it supports the hot reloading of the SSL certificates like
+mentioned above.
 
 Certificate Hot reloading may also be triggered using the
 `nodetool reloadssl` command. Use this if you want to Cassandra to
