--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cassandra (3.0.27) UNRELEASED; urgency=medium
+
+  * New release
+
+ -- Mick Semb Wever <mck@apache.org>  Mon, 07 Feb 2022 13:12:52 +0100
+
 cassandra (3.0.26) unstable; urgency=medium
 
   * New release
