--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Add guardrail for the number of fields per UDT (CASSANDRA-17385)
  * Allow users to change cqlsh history location using env variable (CASSANDRA-17448)
  * Add required -f option to use nodetool verify and standalone sstableverify (CASSANDRA-17017)
  * Add support for UUID based sstable generation identifiers (CASSANDRA-17048)
