--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Add guardrails for collection items and size (CASSANDRA-17153)
  * Improve guardrails messages (CASSANDRA-17430)
  * Remove all usages of junit.framework and ban them via Checkstyle (CASSANDRA-17316)
  * Add guardrails for read/write consistency levels (CASSANDRA-17188)
