Fix Flaky testNoSuchRepairSessionAnticompaction Syncronizes session onSuccess handlePrepareSession for LocalSessions patch by Bernardo Botella Corbi

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,5 @@
+Flaky testNoSuchRepairSessionAnticompaction (CASSANDRA-17335)
+
 4.1
  * Add support for string concatenations through the + operator (CASSANDRA-17190)
  * Limit the maximum hints size per host (CASSANDRA-17142)
